<resources>
    <string name="app_name">Ramadan</string>
    <string name="magfirat"> মাগফিরাতের ১০ দিন </string>
    <string name="rahmat">রহমতের ১০ দিন</string>
    <string name="najat">নাযাতের ১০ দিন</string>
    <string name="m1">১৭-জুন (০১) বুধবার</string>
    <string name="m2">১৮-জুন (০২) বৃহঃস্পতি</string>
    <string name="m3">১৯-জুন (০৩) শুক্রবার</string>
    <string name="m4">২০-জুন (০৪) শনিবার</string>
    <string name="m5">২১-জুন (০৫) রবিবার</string>
    <string name="m6">২২-জুন (০৬) সোমবার</string>
    <string name="m7">২৩-জুন (০৭) মঙ্গলবার</string>
    <string name="m8">২৪-জুন (০৮) বুধবার</string>
    <string name="m9">2৫-জুন (০৯) বৃহঃস্পতি</string>
    <string name="m10">২৬-জুন (১০) শুক্রবার</string>
    <string name="r1">২৭-জুন (১১) শনিবার</string>
    <string name="r2">২৮-জুন (১২) রবিবার</string>
    <string name="r3">২৯-জুন (১৩) সোমবার</string>
    <string name="r4">৩০-জুন (১৪) মঙ্গলবার</string>
    <string name="r5">১-জুলাই (১৫) বুধবার</string>
    <string name="r6">২-জুলাই (১৬) বৃহঃস্পতি</string>
    <string name="r7">৩-জুলাই (১৭) শুক্রবার</string>
    <string name="r8">৪-জুলাই (১৮) শনিবার</string>
    <string name="r9">৫-জুলাই (১৯) রবিবার</string>
    <string name="r10">০৬-জুলাই (২০) সোমবার</string>
    <string name="n1">০৭-জুলাই (২১) মঙ্গলবার</string>
    <string name="n2">০৮-জুলাই (২২) বুধবার</string>
    <string name="n3">০৯-জুলাই (২৩) বৃহঃস্পতি</string>
    <string name="n4">১০-জুলাই (২৪) শুক্রবার</string>
    <string name="n5">১১-জুলাই (২৫) শনিবার</string>
    <string name="n6">১২-জুলাই (২৬) রবিবার</string>
    <string name="n7">১৩-জুলাই (২৭) সোমবার</string>
    <string name="n8">১৪-জুলাই (২৮) মঙ্গলবার</string>
    <string name="n9">১৫-জুলাই (২৯) বুধবার</string>
    <string name="n10">১৬-জুলাই (৩০) বৃহঃস্পতি</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_m1">M1Activity</string>
    <string name="dhaka">ঢাকা</string>
    <string name="sylhet">সিলেট</string>
    <string name="khulna">খুলনা</string>
    <string name="rajshahi">রাজশাহী</string>
    <string name="dinajpur">দিনাজপুর</string>
    <string name="borishal">বরিশাল</string>
    <string name="chittagong">চট্রগ্রাম</string>
    <string name="sehri_dhaka1">সেহরির শেষ সময় : ৩টা ৪৪মি:</string>
    <string name="ifter_dhaka1">ইফতারের সময় : ৬টা ৪৮মি:</string>
    <string name="sehri_dhaka2">সেহরির শেষ সময় : ৩টা ৪৪মি:</string>
    <string name="ifter_dhaka2">ইফতারের সময় : ৬টা ৪৮মি:</string>
    <string name="sehri_dhaka3">সেহরির শেষ সময় : ৩টা ৪৪মি:</string>
    <string name="ifter_dhaka3">ইফতারের সময় : ৬টা ৪৯মি:</string>
    <string name="sehri_dhaka4">সেহরির শেষ সময় : ৩টা ৪৪মি:</string>
    <string name="ifter_dhaka4">ইফতারের সময় : ৬টা ৪৯মি:</string>
    <string name="sehri_dhaka5">সেহরির শেষ সময় : ৩টা ৪৪মি:</string>
    <string name="ifter_dhaka5">ইফতারের সময় : ৬টা ৪৯মি:</string>
    <string name="sehri_dhaka6">সেহরির শেষ সময় : ৩টা ৪৪মি:</string>
    <string name="ifter_dhaka6">ইফতারের সময় : ৬টা ৪৯মি:</string>
    <string name="sehri_dhaka7">সেহরির শেষ সময় : ৩টা ৪৫মি:</string>
    <string name="ifter_dhaka7">ইফতারের সময় : ৬টা ৪৯মি:</string>
    <string name="sehri_dhaka8">সেহরির শেষ সময় : ৩টা ৪৫মি:</string>
    <string name="ifter_dhaka8">ইফতারের সময় : ৬টা ৫০মি:</string>
    <string name="sehri_dhaka9">সেহরির শেষ সময় : ৩টা ৪৫মি:</string>
    <string name="ifter_dhaka9">ইফতারের সময় : ৬টা ৫০মি:</string>
    <string name="sehri_dhaka10">সেহরির শেষ সময় : ৩টা ৪৫মি:</string>
    <string name="ifter_dhaka10">ইফতারের সময় : ৬টা ৫০মি:</string>
    <string name="sehri_dhaka11">সেহরির শেষ সময় : ৩টা ৪৬মি:</string>
    <string name="ifter_dhaka11">ইফতারের সময় : ৬টা ৫০মি:</string>
    <string name="sehri_dhaka12">সেহরির শেষ সময় : ৩টা ৪৬মি:</string>
    <string name="ifter_dhaka12">ইফতারের সময় : ৬টা ৫০মি:</string>
    <string name="sehri_dhaka13">সেহরির শেষ সময় : ৩টা ৪৬মি:</string>
    <string name="ifter_dhaka13">ইফতারের সময় : ৬টা ৫০মি:</string>
    <string name="sehri_dhaka14">সেহরির শেষ সময় : ৩টা ৪৭মি:</string>
    <string name="ifter_dhaka14">ইফতারের সময় : ৬টা ৫০মি:</string>
    <string name="sehri_dhaka15">সেহরির শেষ সময় : ৩টা ৪৭মি:</string>
    <string name="ifter_dhaka15">ইফতারের সময় : ৬টা ৫০মি:</string>
    <string name="sehri_dhaka16">সেহরির শেষ সময় : ৩টা ৪৮মি:</string>
    <string name="ifter_dhaka16">ইফতারের সময় : ৬টা ৫০মি:</string>
    <string name="sehri_dhaka17">সেহরির শেষ সময় : ৩টা ৪৮মি:</string>
    <string name="ifter_dhaka17">ইফতারের সময় : ৬টা ৫১মি:</string>
    <string name="sehri_dhaka18">সেহরির শেষ সময় : ৩টা ৪৯মি:</string>
    <string name="ifter_dhaka18">ইফতারের সময় : ৬টা ৫১মি:</string>
    <string name="sehri_dhaka19">সেহরির শেষ সময় : ৩টা ৪৯মি:</string>
    <string name="ifter_dhaka19">ইফতারের সময় : ৬টা ৫১মি:</string>
    <string name="sehri_dhaka20">সেহরির শেষ সময় : ৩টা ৪৯মি:</string>
    <string name="ifter_dhaka20">ইফতারের সময় : ৬টা ৫১মি:</string>
    <string name="sehri_dhaka21">সেহরির শেষ সময় : ৩টা ৫০মি:</string>
    <string name="ifter_dhaka21">ইফতারের সময় : ৬টা ৫০মি:</string>
    <string name="sehri_dhaka22">সেহরির শেষ সময় : ৩টা ৫০মি:</string>
    <string name="ifter_dhaka22">ইফতারের সময় : ৬টা ৫০মি:</string>
    <string name="sehri_dhaka23">সেহরির শেষ সময় : ৩টা ৫১মি:</string>
    <string name="ifter_dhaka23">ইফতারের সময় : ৬টা ৫০মি:</string>
    <string name="sehri_dhaka24">সেহরির শেষ সময় : ৩টা ৫২মি:</string>
    <string name="ifter_dhaka24">ইফতারের সময় : ৬টা ৫০মি:</string>
    <string name="sehri_dhaka25">সেহরির শেষ সময় : ৩টা ৫২মি:</string>
    <string name="ifter_dhaka25">ইফতারের সময় : ৬টা ৫০মি:</string>
    <string name="sehri_dhaka26">সেহরির শেষ সময় : ৩টা ৫৩মি:</string>
    <string name="ifter_dhaka26">ইফতারের সময় : ৬টা ৫০মি:</string>
    <string name="sehri_dhaka27">সেহরির শেষ সময় : ৩টা ৫৩মি:</string>
    <string name="ifter_dhaka27">ইফতারের সময় : ৬টা ৫০মি:</string>
    <string name="sehri_dhaka28">সেহরির শেষ সময় : ৩টা ৫৪মি:</string>
    <string name="ifter_dhaka28">ইফতারের সময় : ৬টা ৪৯মি:</string>
    <string name="sehri_dhaka29">সেহরির শেষ সময় : ৩টা ৫৪মি:</string>
    <string name="ifter_dhaka29">ইফতারের সময় : ৬টা ৪৯মি:</string>
    <string name="sehri_dhaka30">সেহরির শেষ সময় : ৩টা ৫৫মি:</string>
    <string name="ifter_dhaka30">ইফতারের সময় : ৬টা ৪৯মি:</string>
    <string name="sehri_sylhet1">সেহরির শেষ সময় : ৩টা ৩৫মি:</string>
    <string name="ifter_sylhet1">ইফতারের সময় : ৬টা ৪৪মি:</string>
    <string name="sehri_sylhet2">সেহরির শেষ সময় : ৩টা ৩৫মি:</string>
    <string name="ifter_sylhet2">ইফতারের সময় : ৬টা ৪৪মি:</string>
    <string name="sehri_sylhet3">সেহরির শেষ সময় : ৩টা ৩৫মি:</string>
    <string name="ifter_sylhet3">ইফতারের সময় : ৬টা ৪৫মি:</string>
    <string name="sehri_sylhet4">সেহরির শেষ সময় : ৩টা ৩৫মি:</string>
    <string name="ifter_sylhet4">ইফতারের সময় : ৬টা ৪৫মি:</string>
    <string name="sehri_sylhet5">সেহরির শেষ সময় : ৩টা ৩৬মি:</string>
    <string name="ifter_sylhet5">ইফতারের সময় : ৬টা ৪৫মি:</string>
    <string name="sehri_sylhet6">সেহরির শেষ সময় : ৩টা ৩৬মি:</string>
    <string name="ifter_sylhet6">ইফতারের সময় : ৬টা ৪৫মি:</string>
    <string name="sehri_sylhet7">সেহরির শেষ সময় : ৩টা ৩৬মি:</string>
    <string name="ifter_sylhet7">ইফতারের সময় : ৬টা ৪৫মি:</string>
    <string name="sehri_sylhet8">সেহরির শেষ সময় : ৩টা ৩৬মি:</string>
    <string name="ifter_sylhet8">ইফতারের সময় : ৬টা ৪৫মি:</string>
    <string name="sehri_sylhet9">সেহরির শেষ সময় : ৩টা ৩৭মি:</string>
    <string name="ifter_sylhet9">ইফতারের সময় : ৬টা ৪৬মি:</string>
    <string name="sehri_sylhet10">সেহরির শেষ সময় : ৩টা ৩৭মি:</string>
    <string name="ifter_sylhet10">ইফতারের সময় : ৬টা ৪৬মি:</string>
    <string name="sehri_sylhet11">সেহরির শেষ সময় : ৩টা ৩৭মি:</string>
    <string name="ifter_sylhet11">ইফতারের সময় : ৬টা ৪৬মি:</string>
    <string name="sehri_sylhet12">সেহরির শেষ সময় : ৩টা ৩৮মি:</string>
    <string name="ifter_sylhet12">ইফতারের সময় : ৬টা ৪৬মি:</string>
    <string name="sehri_sylhet13">সেহরির শেষ সময় : ৩টা ৩৮মি:</string>
    <string name="ifter_sylhet13">ইফতারের সময় : ৬টা ৪৬মি:</string>
    <string name="sehri_sylhet14">সেহরির শেষ সময় : ৩টা ৩৮মি:</string>
    <string name="ifter_sylhet14">ইফতারের সময় : ৬টা ৪৬মি:</string>
    <string name="sehri_sylhet15">সেহরির শেষ সময় : ৩টা ৩৯মি:</string>
    <string name="ifter_sylhet15">ইফতারের সময় : ৬টা ৪৬মি:</string>
    <string name="sehri_sylhet16">সেহরির শেষ সময় : ৩টা ৩৯মি:</string>
    <string name="ifter_sylhet16">ইফতারের সময় : ৬টা ৪৬মি:</string>
    <string name="sehri_sylhet17">সেহরির শেষ সময় : ৩টা ৪০মি:</string>
    <string name="ifter_sylhet17">ইফতারের সময় : ৬টা ৪৬মি:</string>
    <string name="sehri_sylhet18">সেহরির শেষ সময় : ৩টা ৪০মি:</string>
    <string name="ifter_sylhet18">ইফতারের সময় : ৬টা ৪৬মি:</string>
    <string name="sehri_sylhet19">সেহরির শেষ সময় : ৩টা ৪১মি:</string>
    <string name="ifter_sylhet19">ইফতারের সময় : ৬টা ৪৬মি:</string>
    <string name="sehri_sylhet20">সেহরির শেষ সময় : ৩টা ৪১মি:</string>
    <string name="ifter_sylhet20">ইফতারের সময় : ৬টা ৪৬মি:</string>
    <string name="sehri_sylhet21">সেহরির শেষ সময় : ৩টা ৪২মি:</string>
    <string name="ifter_sylhet21">ইফতারের সময় : ৬টা ৪৬মি:</string>
    <string name="sehri_sylhet22">সেহরির শেষ সময় : ৩টা ৪২মি:</string>
    <string name="ifter_sylhet22">ইফতারের সময় : ৬টা ৪৬মি:</string>
    <string name="sehri_sylhet23">সেহরির শেষ সময় : ৩টা ৪৩মি:</string>
    <string name="ifter_sylhet23">ইফতারের সময় : ৬টা ৪৬মি:</string>
    <string name="sehri_sylhet24">সেহরির শেষ সময় : ৩টা ৪৩মি:</string>
    <string name="ifter_sylhet24">ইফতারের সময় : ৬টা ৪৬মি:</string>
    <string name="sehri_sylhet25">সেহরির শেষ সময় : ৩টা ৪৪মি:</string>
    <string name="ifter_sylhet25">ইফতারের সময় : ৬টা ৪৬মি:</string>
    <string name="sehri_sylhet26">সেহরির শেষ সময় : ৩টা ৪৪মি:</string>
    <string name="ifter_sylhet26">ইফতারের সময় : ৬টা ৪৬মি:</string>
    <string name="sehri_sylhet27">সেহরির শেষ সময় : ৩টা ৪৫মি:</string>
    <string name="ifter_sylhet27">ইফতারের সময় : ৬টা ৪৫মি:</string>
    <string name="sehri_sylhet28">সেহরির শেষ সময় : ৩টা ৪৫মি:</string>
    <string name="ifter_sylhet28">ইফতারের সময় : ৬টা ৪৫মি:</string>
    <string name="sehri_sylhet29">সেহরির শেষ সময় : ৩টা ৪৬মি:</string>
    <string name="ifter_sylhet29">ইফতারের সময় : ৬টা ৪৫মি:</string>
    <string name="sehri_sylhet30">সেহরির শেষ সময় : ৩টা ৪৭মি:</string>
    <string name="ifter_sylhet30">ইফতারের সময় : ৬টা ৪৫মি:</string>
    <string name="sehri_khulna1">সেহরির শেষ সময় : ৩টা ৫০মি:</string>
    <string name="ifter_khulna1">ইফতারের সময় : ৬টা ৫০মি:</string>
    <string name="sehri_khulna2">সেহরির শেষ সময় : ৩টা ৫০মি:</string>
    <string name="ifter_khulna2">ইফতারের সময় : ৬টা ৫০মি:</string>
    <string name="sehri_khulna3">সেহরির শেষ সময় : ৩টা ৫০মি:</string>
    <string name="ifter_khulna3">ইফতারের সময় : ৬টা ৫০মি:</string>
    <string name="sehri_khulna4">সেহরির শেষ সময় : ৩টা ৫০মি:</string>
    <string name="ifter_khulna4">ইফতারের সময় : ৬টা ৫০মি:</string>
    <string name="sehri_khulna5">সেহরির শেষ সময় : ৩টা ৫১মি:</string>
    <string name="ifter_khulna5">ইফতারের সময় : ৬টা ৫১মি:</string>
    <string name="sehri_khulna6">সেহরির শেষ সময় : ৩টা ৫১মি:</string>
    <string name="ifter_khulna6">ইফতারের সময় : ৬টা ৫১মি:</string>
    <string name="sehri_khulna7">সেহরির শেষ সময় : ৩টা ৫১মি:</string>
    <string name="ifter_khulna7">ইফতারের সময় : ৬টা ৫১মি:</string>
    <string name="sehri_khulna8">সেহরির শেষ সময় : ৩টা ৫১মি:</string>
    <string name="ifter_khulna8">ইফতারের সময় : ৬টা ৫১মি:</string>
    <string name="sehri_khulna9">সেহরির শেষ সময় : ৩টা ৫২মি:</string>
    <string name="ifter_khulna9">ইফতারের সময় : ৬টা ৫১মি:</string>
    <string name="sehri_khulna10">সেহরির শেষ সময় : ৩টা ৫২মি:</string>
    <string name="ifter_khulna10">ইফতারের সময় : ৬টা ৫১মি:</string>
    <string name="sehri_khulna11">সেহরির শেষ সময় : ৩টা ৫২মি:</string>
    <string name="ifter_khulna11">ইফতারের সময় : ৬টা ৫২মি:</string>
    <string name="sehri_khulna12">সেহরির শেষ সময় : ৩টা ৫৩মি:</string>
</resources>