<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_material_dark"
    tools:context="com.example.janina.ramadan.com.magfirat.M1Activity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:baselineAligned="true"
        android:background="#ff5f0518">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dhaka"
            android:text="@string/dhaka"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="#ff5f0518"
            android:background="#ff037b8d" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dhaka_time"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#ff037b8d"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chittogong"
            android:text="@string/chittagong"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="#ff5f0518"
            android:background="#ff037b8d"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chittogong_time"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#ff037b8d"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sylhet"
            android:text="@string/sylhet"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="#ff5f0518"
            android:background="#ff037b8d"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sylhet_time"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#ff037b8d"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rajshahi"
            android:text="@string/rajshahi"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="#ff5f0518"
            android:background="#ff037b8d"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rajshahi_time"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#ff037b8d"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/khulna"
            android:text="@string/khulna"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="#ff5f0518"
            android:background="#ff037b8d"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/khulna_time"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#ff037b8d"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/borishal"
            android:text="@string/borishal"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="#ff5f0518"
            android:background="#ff037b8d"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/borishal_time"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#ff037b8d"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dinajpur"
            android:text="@string/dinajpur"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="#ff5f0518"
            android:background="#ff037b8d"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dinajpur_time"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#ff037b8d"
            />



    </LinearLayout>
</ScrollView>
